<resources>
    <string name="app_name">Calculator</string>

    <!-- Strings needed in main activity -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="backspace">BKSP</string>
    <string name="C">C</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="plus_minus">+ / -</string>
    <string name="comma">.</string>
    <string name="mod">%</string>
    <string name="square">sqrt</string>
    <string name="pow_x2">x^2</string>
    <string name="pow_xy">x^y</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>

    <!-- Strings needed in menu activity -->
    <string name="simple_calc">Simple Calculator</string>
    <string name="adv_calc">Advanced Calculator</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Strings needed in About activity -->
    <string name="author_title">Author</string>
    <string name="author">Marco Born</string>
    <string name="app_name_title">App name</string>
    <string name="desc_title">About</string>
    <string name="description">This application is a simple calculator, with basic operators on the simple calculator, and more complex operations on the advanced version.</string>
</resources>